--- a/src/global.scss
+++ b/src/global.scss
@@ -9,3 +9,15 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+.toast_login{
+    color:red;
+    
+}
+.toast_login_fail
+{
+    color:red;
+    
+}
+.toast_mail{
+    color:green;
+}
