with transaction and mail

--- a/src/app/pages/payment-details-add/payment-details-add.page.html
+++ b/src/app/pages/payment-details-add/payment-details-add.page.html
@@ -58,7 +58,7 @@
                 </td>
             </tr>
         </table>
-        <ion-button [routerLink]="['/transection-status']" style="position:fixed;width:100%;bottom:0;left:0" routerLinkActive="router-link-active"  (click)="onInsert()">Next</ion-button>
+        <ion-button  style="position:fixed;width:100%;bottom:0;left:0" routerLinkActive="router-link-active"  (click)="onInsert()">Next</ion-button>
 
 
     </form>
