--- a/src/app/pages/view-payment-method/view-payment-method.page.html
+++ b/src/app/pages/view-payment-method/view-payment-method.page.html
@@ -4,7 +4,7 @@
             <!-- <ion-back-button defaultHref="payment-method"></ion-back-button> -->
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>Payment Method</ion-title>
+        <ion-title>My Cards</ion-title>
     </ion-toolbar>
 </ion-header>
 
