--- a/src/app/pages/confirm-payment/confirm-payment.page.html
+++ b/src/app/pages/confirm-payment/confirm-payment.page.html
@@ -23,28 +23,29 @@
 
   <br /><br />
   <table style="border: 1px solid black">
-      <tr>
-          <td>
-            <ion-label>
-              <b> Vehicle No :- {{ vno }}</b>
-            </ion-label>
-          </td>
-        </tr>    
+    <tr>
+      <td>
+        <ion-label>
+          <b> Vehicle No :- {{ vno }}</b>
+        </ion-label>
+      </td>
+    </tr>
     <tr>
       <td>
         <ion-label>
           <b> Jounrey Type :- {{ whichj }}</b>
         </ion-label>
-        <br/>
-        <ion-label *ngFor="let item of vehicletype" style="float:left" >
-            <b> Vehicle :- {{ item.vehicle_type_name }}</b>
-          </ion-label>
+        <br />
+        <ion-label *ngFor="let item of vehicletype" style="float:left">
+          <b> Vehicle :- {{ item.vehicle_type_name }}</b>
+        </ion-label>
       </td>
     </tr>
     <tr>
       <td>
         <ol>
           <li *ngFor="let item of tollPlazas">{{ item.highway_name }}</li>
+          <li *ngFor="let item of amounts">{{ item }}</li>
         </ol>
         <!-- <ion-label>
           {{ item.highway_name }}
@@ -54,9 +55,49 @@
     <tr>
       <td>
         <ion-label style="float:right">
-         <b> Total Amount :- {{ amt | currency: "INR" }}</b>
+          <b> Total Amount :- {{ amt | currency: "INR" }}</b>
         </ion-label>
       </td>
     </tr>
-     </table>
+  </table>
+
+  <table>
+    <ion-list *ngFor="let item of paydata">
+      <div class="card list">
+        <div class="item item-divider">
+          <h3><b>Payment Detail</b></h3>
+        </div>
+        <div class="item item-divider">
+          <h6><b> Card No </b> :- {{ item.card_no }}</h6>
+        </div>
+        <div class="item item-divider">
+          <h6><b> Method Name </b> :- {{ item.method_name }}</h6>
+        </div>
+        <div class="item item-divider">
+          <h6><b> Card Name </b> :- {{ item.card_name }}</h6>
+        </div>
+        <div>
+          <ion-item>
+            <ion-input
+              type="password"
+              pattern="[0-9]{3}"
+              placeholder="Enter CVV"
+              title="Only three Digit allow"
+            ></ion-input>
+
+            
+          
+            <ion-icon name="help-circle"></ion-icon>
+        
+          </ion-item>
+        </div>
+      </div>
+    </ion-list>
+  </table>
+  <ion-button
+    expand="block"
+    style="width:100%;  margin-bottom: -20px"
+    (click)="transaction()"
+    >Confirm</ion-button
+  >
 </ion-content>
