--- a/src/app/pages/select-toll-plaza/select-toll-plaza.page.html
+++ b/src/app/pages/select-toll-plaza/select-toll-plaza.page.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-item>
     <ion-label>Total Amount to be paid: </ion-label
-    ><ion-input [(ngModel)]="totalAmount" disabled></ion-input>
+    ><ion-input [(ngModel)]="totalAmount" readonly></ion-input>
   </ion-item>
 
   <ion-radio-group
