resolved some errors

--- a/src/app/my-vehicles/my-vehicles.page.html
+++ b/src/app/my-vehicles/my-vehicles.page.html
@@ -4,11 +4,6 @@
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
         <ion-title>My Vehicles</ion-title>
-        <!-- <ion-buttons slot="end">
-      <button ion-button icon-only size="large" color="white" (click)="openModel()">
-        <ion-icon name="add-circle-outline" size="large" color="primary"></ion-icon>
-      </button>
-    </ion-buttons> -->
     </ion-toolbar>
 </ion-header>
 
@@ -28,40 +23,34 @@
             <ion-item>
                 <ion-avatar item-start>
                     <span style="font-size: 24px;" *ngIf="item.vehicle_type_id=='2'">
-            <i class="fas fa-car"></i>
-          </span>
+                        <i class="fas fa-car"></i>
+                    </span>
                     <ion-icon name="bus" size="large" *ngIf="item.vehicle_type_id=='1'"></ion-icon>
                     <span style="font-size: 24px;" *ngIf="item.vehicle_type_id=='3'">
-            <i class="fas fa-truck" size="large"></i>
-          </span>
+                        <i class="fas fa-truck" size="large"></i>
+                    </span>
                     <span style="font-size: 24px;" *ngIf="item.vehicle_type_id=='4'">
-            <i class="fas fa-motorcycle"></i>
-          </span>
+                        <i class="fas fa-motorcycle"></i>
+                    </span>
                     <span style="font-size: 24px;" *ngIf="item.vehicle_type_id=='5'">
-            <i class="fas fa-truck-monster"></i>
-          </span>
+                        <i class="fas fa-truck-monster"></i>
+                    </span>
                 </ion-avatar>
                 <p>
                     Vehicle No: {{item.vehicle_no}}
-                    <br />
-                    <!-- Vehicle Type: {{item.vehicle_type_name}} -->
-                    <ion-label>{{item.vehicle_type_name}}</ion-label>
-                    <!-- <ion-select placeholder="Select Your Vehicle Type">
-            <ion-select-option value="{{i.vehicle_type_id}}" *ngFor="let i of vehicle_type">{{i.vehicle_type_name}}
-            </ion-select-option>
-          </ion-select> -->
-                    <!-- </ion-label> -->
+                    <br /> Vehicle Type: {{item.vehicle_type_name}}
+                    <!-- <ion-label>{{item.vehicle_type_name}}</ion-label> -->
                 </p>
             </ion-item>
             <ion-item-options>
-                <button ion-button color="secondary" icon-start (click)="updateVehicle(item.vehicle_no)">
-          <ion-icon name="edit" color="secondary"></ion-icon>
-          Save
-        </button>
+                <!-- <button ion-button color="secondary" icon-start (click)="updateVehicle(item.vehicle_no)">
+                    <ion-icon name="edit" color="secondary"></ion-icon>
+                    Save
+                </button> -->
                 <button ion-button color="danger" icon-start (click)="deleteVehicle(item.vehicle_no)">
-          <ion-icon name="trash"></ion-icon>
-          Delete
-        </button>
+                    <ion-icon color="danger" name="trash"></ion-icon>
+                    Delete
+                </button>
             </ion-item-options>
         </ion-item-sliding>
     </ion-list>
