--- a/src/app/pages/payment-details-add/payment-details-add.page.scss
+++ b/src/app/pages/payment-details-add/payment-details-add.page.scss
@@ -10,7 +10,7 @@ body {
     display: -ms-flexbox;
     /* IE10 */
     display: flex;
-    width: 100%;
+    // width: 100%;
     margin-bottom: 15px;
 }
 
